[gd_scene load_steps=6 format=3 uid="uid://bcigxl3havu2h"]

[ext_resource type="Script" uid="uid://cwjy2kqwfchhw" path="res://Scripts/LevelLogic/Level1--2.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://be6sbtmqr5d2f" path="res://Scenes/Systems/GridManager.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://bwv5t3eoriqlv" path="res://Assets/Fonts/Minecraft.ttf" id="5_hon6n"]
[ext_resource type="AudioStream" uid="uid://cr4bfn051tkfs" path="res://Assets/Audio/Win1.mp3" id="6"]
[ext_resource type="AudioStream" uid="uid://cpe2vuf5wyk74" path="res://Assets/Audio/UIClick.mp3" id="7"]

[node name="LevelSwitcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.780392)

[node name="GridManager" parent="." instance=ExtResource("2")]

[node name="BGAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
autoplay = true

[node name="ButtonClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")

[node name="CenterContainer" type="CenterContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -113.0
offset_right = 142.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_hon6n")
theme_override_font_sizes/font_size = 64
text = "YOU WIN!"

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_hon6n")
theme_override_font_sizes/font_size = 32
text = "CONTINUE"

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_hon6n")
theme_override_font_sizes/font_size = 32
text = "PLAY AGAIN"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
